# flow

./: .env  .gitignore  README.md  create_mongo_data.sh  docker-compose.yml  map_matcher_k8s_dag.py  start-as-k8s.sh  start-docker-compose.sh  start-postgres-for-airflow.sh  start.sh  stop-as-k8s.sh
consumer/: Dockerfile
consumer/mapmatcher/: map_matcher.py
instructions/: Directions.md
k8s/: airflow-values.yml  k8s_dag.py  update_dag.sh
k8s/config-maps/: airflow-permissions.yml  mongo-config.yml  mongo-init-script.yml  postgres-config.yml  postgres-init-script.yml
k8s/deployments/: cron.yml  mongo-deployment.yml  postgres-deployment.yml  pulsar-deployment.yml  pulsar-deploymet.yml
k8s/jobs/: map-maptcher-job.yml  map-matcher-job.yml  pulsar-consumer.yml
k8s/namespaces/: namespace.yml
k8s/persistant-volume-claims/: airflow-dag-pvc.yml
k8s/services/: mongo-service.yml  postgres-service.yml  pulsar-service.yml
mongodb/: init-mongo.js  mongod.conf
postgres/: Dockerfile  init.sql  postgresql.conf
python/: Dockerfile  requirements.txt
python/mapmatcher/: CMakeLists-local.txt  CMakeLists.txt  edges-small.json  edges2.json  events-small.json  events2.json  map_matcher-local.py  map_matcher.py  mapmatcher.cpp  producer_push.py  shoopdawhoop-working.py  shoopdawhoop-workingcopy.py  shoopdawhoop.py
